# IcedTabsTest

./: Cargo.toml  README.md
src/: backend_controller.rs  main.rs
src/main_window/: main_menu.rs  mod.rs
src/main_window/main_widget/: mod.rs
src/main_window/main_widget/tabs/: mod.rs  settings.rs  summary.rs
