[package]
name = "node-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iced = { version = "0.9", features = ["canvas", "debug", "tokio"] }
iced_aw = { version = "0.5", features = ["cupertino"] }

tokio = { version = "1.27", features = ["time"] }
